# bspd

./: AUTHORS  Makefile.am  NEWS  config.h.in  configure.ac
scripts/: bspd.main.lua  bspd.runtime.conf.in
src/: Makefile.am  bspd.c  bspd.h
src/protocol/: http.c  internal.c  normal.c  protocol.h  websocket.c
src/serialization/: json.c  serialization.h
src/server/: clients.c  conf.c  main.c  script.c  server.h  session.c
src/utils/: compress.c  debug.c  misc.c  utils.h
src/wrapper/: global.c  misc.c  standard.c  wrapper.h
